--- a/package.json
+++ b/package.json
@@ -13,11 +13,22 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
+  "dependencies": {
+    "@notionhq/client": "^5.7.0",
+    "isomorphic-dompurify": "^2.35.0",
+    "marked": "^17.0.1",
+    "marked-gfm-heading-id": "^4.1.3",
+    "notion-to-md": "^3.1.9",
+    "redis": "^5.10.0",
+    "rss": "^1.2.2",
+    "shiki": "^3.21.0"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^7.0.1",
     "@eslint/compat": "^1.4.0",
     "@eslint/js": "^9.39.1",
     "@sveltejs/adapter-auto": "^7.0.0",
+    "@sveltejs/adapter-vercel": "^6.3.0",
     "@sveltejs/kit": "^2.49.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/typography": "^0.5.19",
@@ -35,15 +46,5 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.1",
     "vite": "^7.2.6"
-  },
-  "dependencies": {
-    "@notionhq/client": "^5.7.0",
-    "isomorphic-dompurify": "^2.35.0",
-    "marked": "^17.0.1",
-    "marked-gfm-heading-id": "^4.1.3",
-    "notion-to-md": "^3.1.9",
-    "redis": "^5.10.0",
-    "rss": "^1.2.2",
-    "shiki": "^3.21.0"
   }
 }
