--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@fontsource/dm-sans": "^5.2.8",
+    "@fontsource/maple-mono": "^5.2.6",
     "@notionhq/client": "^5.7.0",
     "isomorphic-dompurify": "^2.35.0",
     "marked": "^17.0.1",
